Implement IBindHost::CreateMoniker including base url support, initialise _Module global properly and comment out IOleInPlaceSiteWindowless b=200680 r=dbradley@netscape.com sr=alecf@netscape.com