embedding/browser/activex/src/plugin/MozActiveX.cpp
@@ -49,5 +49,20 @@
 
 CComModule _Module;
 
-//BEGIN_OBJECT_MAP(ObjectMap)
-//END_OBJECT_MAP()
+BEGIN_OBJECT_MAP(ObjectMap)
+END_OBJECT_MAP()
+
+extern "C"
+BOOL WINAPI DllMain(HINSTANCE hInstance, DWORD dwReason, LPVOID /*lpReserved*/)
+{
+    if (dwReason == DLL_PROCESS_ATTACH)
+	{
+		_Module.Init(ObjectMap, hInstance, &LIBID_ATLLib);
+		DisableThreadLibraryCalls(hInstance);
+	}
+	else if (dwReason == DLL_PROCESS_DETACH)
+	{
+		_Module.Term();
+	}
+	return TRUE;    // ok
+}
